# draw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cdraw.py  draw.py  engine.py  gdraw.py  pyproject.toml  run.py
assets/: desenho.txt  desenho_console.txt  teste_console.txt  teste_grafico.txt
docs/: backlog.md  developer_guide.md  release_guide.md  renderer_creation_guide.md  technical_details.md  testing.md  user_manual.md  wsl_instructions.md
scripts/install/: install.ps1  install.sh
src/draw/: __main__.py
src/draw/core/: engine.py
src/draw/renderers/: base.py  console_renderer.py  mock_renderer.py  tkinter_renderer.py
tests/: test_engine.py
