[project]
name = "draw"
version = "0.1.0"
description = "Comando DRAW"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.13"
dependencies = []

[project.scripts]
draw = "draw.__main__:main"
pydraw = "draw.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
